--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/tinacms/gatsby-starter-tinacms/issues"
   },
   "dependencies": {
+    "@tinacms/react-forms": "^0.38.0",
     "express-basic-auth": "^1.2.0",
     "gatsby": "^2.15.36",
     "gatsby-image": "^2.2.27",
